# Course_Work_Django

./: .env.sample  .gitignore  manage.py  pyproject.toml  requirements.txt  sheduler.py
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_initial.py
blog/templates/blog/: article_detail.html  article_list.html
config/: settings.py  urls.py
customers/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
customers/migrations/: 0001_initial.py  0002_customer_owner.py
fixtures_data/: manager_group.json  permissions.json
mail_messages/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mail_messages/migrations/: 0001_initia.py  0003_alter_message_owner.py
mailing/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
mailing/manegment/commands/: run.py  (+1 more)
mailing/migrations/: 0001_initial.py  0002_log.py  0003_mailing_owner_alter_mailing_datetime_finish_and_more.py  0004_alter_mailing_datetime_finish_and_more.py  0005_alter_mailing_datetime_finish_and_more.py
schedule/: admin.py  apps.py  crontab.py  forms.py  models.py  services.py  task_for_mailing.py  urls.py
schedule/migrations/: 0001_initial.py  0002_initial.py
schedule/templatetags/: menu_items.py  my_tags.py
schedule/views/: client.py  home.py  newsletter.py  text_for_newsletter.py
users/: admin.py  form.py  forms.py  models.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_id.py  0003_alter_user_id.py  0004_alter_user_id.py  0005_alter_user_id.py
users/templates/: login.html
(+46 files in other folders)
