[tool.poetry]
name = "Course_Work_Django"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
pillow = "^10.3.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.4"
python-dotenv = "^1.0.1"
pytils = "^0.4.1"
apscheduler = "^3.10.4"
django-crispy-forms = "^2.1"
crispy-bootstrap4 = "^2024.1"
appconfig = "^0.1"
django-apscheduler = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"